--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -26,7 +26,7 @@ header nav ul li {
 }
 
 header nav ul li a {
-  color: white;
+  color: rgb(13, 29, 204);
   text-decoration: none;
   font-weight: bold;
 }
