--- a/static/css/styles_dashboard.css
+++ b/static/css/styles_dashboard.css
@@ -16,6 +16,7 @@ h1 {
 h2 {
   color: #343a40;
   margin-top: 2rem;
+  text-align: center;
 }
 
 a {
@@ -27,36 +28,45 @@ a:hover {
   text-decoration: underline;
 }
 
-ul {
-  list-style: none;
-  padding: 0;
+.cards-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+  justify-content: center;
 }
 
-ul li {
-  
-  margin: 0.5rem 0;
+.card {
+  background: linear-gradient(to bottom, #ffffff, #f1f1f1);
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   padding: 1rem;
-  border-radius: 5px;
-  border: 1px solid #ced4da;
+  width: 300px;
+  margin: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.card h3 {
+  margin: 0;
+  color: #007bff;
+}
+
+.card p {
+  margin: 0.5rem 0;
+}
+
+.card .actions {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-ul li span {
+.card .actions a, .card .actions span {
   font-weight: bold;
-  color: #28a745;
 }
 
-ul li span.pendiente {
-  color: #ffc107;
-}
-
-ul li span.no-session {
-  color: #dc3545;
-}
-
-button, .btn {
+.card .actions .btn {
   background: linear-gradient(to right, #007bff, #6610f2);
   color: white;
   border: none;
@@ -66,6 +76,18 @@ button, .btn {
   text-decoration: none;
 }
 
-button:hover, .btn:hover {
+.card .actions .btn:hover {
   background: linear-gradient(to right, #0056b3, #520dc2);
+}
+
+.card .actions .pendiente {
+  color: #ffc107;
+}
+
+.card .actions .no-session {
+  color: #dc3545;
+}
+
+.card .actions .comprado {
+  color: #28a745;
 }
