--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,11 @@
     <title>{% block title %}My App{% endblock %}</title>
     <link
       rel="stylesheet"
+      href="{{ url_for('static', filename='css/styles_navbar.css') }}"
+    />
+    <link
       href="{{ url_for('static', filename='css/styles.css') }}"
+      rel="stylesheet"
     />
     <!-- Incluir Chart.js -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -15,6 +19,7 @@
   <body>
     <header>
       <nav>
+        <div class="logo">Mi Aplicación</div>
         <ul>
           <li><a href="{{ url_for('dashboard') }}">Dashboard</a></li>
           {% if current_user.is_authenticated %} {% if current_user.rol ==
@@ -38,7 +43,6 @@
             <span>Administrador</span>
             {% endif %}
           </li>
-
           {% else %}
           <li><a href="{{ url_for('login') }}">Login</a></li>
           <li><a href="{{ url_for('register') }}">Register</a></li>
