--- a/templates/editar_seccion.html
+++ b/templates/editar_seccion.html
@@ -17,6 +17,9 @@ content %}
     required
   />
   <br />
+  <label for="video_file">Archivo de Video:</label>
+  <input type="file" id="video_file" name="video_file" accept="video/mp4" />
+  <br />
   <label for="es_gratis">¿Es Gratis?</label>
   <input
     type="checkbox"
