--- a/templates/nueva_seccion.html
+++ b/templates/nueva_seccion.html
@@ -12,6 +12,10 @@ content %}
   <label for="video_url">URL del Video:</label>
   <input type="text" name="video_url" required />
   <br />
+
+  <label for="video_file">Archivo de Video:</label>
+  <input type="file" id="video_file" name="video_file" accept="video/mp4" />
+  <br />
   <label for="es_gratis">¿Es Gratis?</label>
   <input type="checkbox" name="es_gratis" />
   <br />
